# ModelDeploy

./: CMakeLists.txt  README.md  test.cpp  utils.h
cv/: utils.h
cv/include/: resnet18.h  segmentation.h
cv/src/: resnet18.cpp  segmentation.cpp
ort/include/: resnet18ort.h
ort/src/: resnet18ort.cpp
